# MBTI-DataCollector

./: .gitignore  CMakeLists.txt  DataCollector.cpp  DataCollector.h  DataCollectorService.cpp  FileSystemWatcher.cpp  FileSystemWatcher.h  FileValidator.h  README.md
tests/: CMakeLists.txt  DataCollectorTest.cpp  FileSystemWatcherTest.cpp  ValidatorTest.cpp
